# AlgoC

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md
Groupe1/TP2/: TP2.md
Groupe1/TP3/: TP3.md
Groupe1/TP5/: TP5.md
Groupe2/TP1/: TP1.md
Groupe2/TP4/: TP4.md
Groupe2/TP6/: TP6.md
Groupe2/TP6/src/: Makefile  bmp.c  bmp.h  client.c  couleur.h  serveur.c
Projet/: CONTRIBUTORS  Projet.md  README  README.md  partie1.md  partie2.md  partie3.md  partie4.md  partie5.md
Projet/src/: Makefile  bmp.c  client  client.c  client.h  couleur.c  serveur  serveur.c  serveur.h  validateur.c  validateur.h
Projet/src/tmp/: balises.txt  couleurs.txt  test.txt
